[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domain-suite"
dynamic = ["version"]
description = "Consolidated domain packages: typed errors, security, API rate limiting, monitoring, and cross-cutting aspects"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "James Ekhator" }]
requires-python = ">=3.11"
optional-dependencies = { logging = ["mixin-logging>=0.6.0"], sensitivity = ["mixin-sensitivity>=0.4.0"], all = ["mixin-logging>=0.6.0", "mixin-sensitivity>=0.4.0"] }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
keywords = ["domains", "errors", "security", "rate-limiting", "monitoring", "aspects"]

[project.urls]
Homepage = "https://pypi.org/project/domain-suite/"
Repository = "https://github.com/jekhator/domain-suite"
Issues = "https://github.com/jekhator/domain-suite/issues"
Changelog = "https://github.com/jekhator/domain-suite/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "domain_errors/config/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["domain_errors", "domain_security", "domain_api_limiter", "domain_monitoring", "domain_aspects"]
exclude = ["domain_*/**/tests"]

[tool.pytest.ini_options]
testpaths = ["domain_errors", "domain_security", "domain_api_limiter", "domain_monitoring", "domain_aspects"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["domain_errors", "domain_security", "domain_api_limiter", "domain_monitoring", "domain_aspects"]
omit = ["domain_*/**/tests/*", "domain_*/common/constants/tests.py", "domain_aspects/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "TID252", "PLC0414", "UP035"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["domain_errors", "domain_security", "domain_api_limiter", "domain_monitoring", "domain_aspects"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.dto-strict]
paths = ["domain_errors/", "domain_security/", "domain_api_limiter/", "domain_monitoring/", "domain_aspects/"]
exception_tags = ["fixture"]

[tool.dto-strict.loc-cap]
hard_cap = 300
soft_target = 200

[dependency-groups]
dev = ["pytest>=8", "pytest-cov", "mypy", "ruff", "httpx", "requests", "aiohttp", "botocore", "boto3", "mixin-logging>=0.6.0", "mixin-sensitivity>=0.4.0"]

[tool.pyright]
venvPath = "."
venv = ".venv"
